# Thunder_fighter_jet

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  highscore.txt
docx/: flowchart.md
inc/: HighScore.h  def.h
includes/: hello.hpp
src/: HighScore.cpp  cheats.cpp  cmake_learn.cpp  def.cpp  def.h  enemy.cpp  enemy.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp
tools/: hello.cpp
